--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <button onclick="start()" class="btn btn-success">start</button>
       </div> 
     <h3 id="status" class="btn btn-danger"></h3>
-    <h3 id="number_of_objects" class="btn btn-warning"></h3>
+    <h3 id="object_status" class="btn btn-warning"></h3>
     
   </center>
 
